# tinygrad

./: .gitignore  CLAUDE.md  HOWTO.md  a.s  analysis.py  app  app.cpp  asm.py  ast.py  atomics_demo.py  bench.py  benchmark.py  c.out  c.out:1.hipv4-amdgcn-amd-amdhsa--gfx1100  c.out:1.hipv4-amdgcn-amd-amdhsa--gfx1100.s  capture.py  categories.md  clock.py  compare.py  compile.py  compiled.c  compiled.cpp  compiled.s  discovery.md  disk.py  examples.md  final.s  find.sh  gemm_fp8.cpp  get_source.py  goal  hiptrace.cpp  k0  k1  kernel.c  kernel.s  kernel_counts_step2.json  kitten.cpp  kitten_amax.cpp  kitten_amax_fused.cpp  (+47 more)
asm/: a.s  b.s
docs/: env_vars.md  mnist.md
dtypes/: index.html
examples/: beautiful_mnist.py  handcode_resnet50_opt.py
experiments/: a2.s  app.cpp  base.cpp  compile.py  compiled.s  gemm.cpp  gemm.py  gemm2.cpp  gemm3.cpp  gemm3.py  matmul.cpp  rocblas_matmul.cpp  t.py  vars.py
extra/: onnx_ops.py  pickle_jit.py  replay.py  replay_jit.py  repro.py  slow_rope.py
kernels/: a.c  b.c
nn/: index.html
perf/: t.py
search/: search_index.json
test/: helpers.py  test_assign.py  test_const_folding.py  test_corealize.py  test_dtype.py  test_dtype_alu.py  test_fp8_llama_e2e.py  test_gc.py  test_jit.py  test_lazyop.py  test_linearizer.py  test_linearizer_failures.py  test_method_cache.py  test_multitensor.py  test_nn.py  test_ops.py  test_pattern_matcher.py  test_profiler.py  test_randomness.py  test_sample.py  test_schedule.py  test_specific_conv.py  test_speed_v_torch.py  test_symbolic_ops.py  test_tensor.py  test_uop_graph.py  test_uops.py
(+334 files in other folders)
